force-app/main/default/objects/Project__c/fields/ACDate__c.field-meta.xml
<CustomField>
    <fullName>ACDate__c</fullName>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>