force-app/main/default/objects/Project__c/fields/ASDate__c.field-meta.xml
<CustomField>
    <fullName>ASDate__c</fullName>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>