force-app/main/default/objects/Project__c/fields/ECDate__c.field-meta.xml
<CustomField>
    <fullName>ECDate__c</fullName>
    <label>Expected Completion Date</label>
    <type>Date</type>
</CustomField>