force-app/main/default/objects/Project__c/fields/ESDate__c.field-meta.xml
<CustomField>
    <fullName>ESDate__c</fullName>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>