force-app/main/default/objects/Project__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <externalId>true</externalId>
    <label>Project Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>