force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DELAYED PROGRESS</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>IN PROGRESS</fullName>
            </value>
            <value>
                <fullName>FINISHING</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
            <value>
                <fullName>LATE BEGINNING</fullName>
            </value>
            <value>
                <fullName>STARTED</fullName>
            </value>
            <value>
                <fullName>NOT STARTED</fullName>
            </value>
            <value>
                <fullName>SUSPENDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>