force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProjectId__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>ESDate__c</columns>
    <columns>ASDate__c</columns>
    <columns>ECDate__c</columns>
    <columns>ACDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>